@@ -34,9 +34,13 @@ export(check_part_whole_relation)
 export(check_that)
 export(compare)
 export(confront)
+export(contains_at_least)
+export(contains_at_most)
+export(contains_exactly)
 export(created)
 export(description)
 export(do_by)
+export(does_not_contain)
 export(errors)
 export(event)
 export(exists_any)
